finish raw navbar with menu and hover

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Dizer</title>
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="logo-wrapper">
+          <img class="logo" src="./assets/img/dizer.png" />
+        </div>
+        <div class="menu-container">
+          <ul class="menu">
+            <li class="item"><a class="link-item">HOME</a></li>
+            <li class="item"><a class="link-item">ABOUT</a></li>
+            <li class="item"><a class="link-item">SERVICE</a></li>
+            <li class="item"><a class="link-item">PORTFOLIO</a></li>
+            <li class="item"><a class="link-item">NEWS</a></li>
+            <li class="item"><a class="link-item">CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="head-banner"></section>
     <script type="text/javascript" src="./utils/util.js"></script>
   </body>
 </html>
