add header banner

--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
         </div>
       </div>
     </nav>
-    <section class="head-banner"></section>
+    <section class="head-banner">
+      <div class="container">
+        <div class="row">
+          <div class="header-content">
+            <h1>Design Studio</h1>
+            <p>
+              Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
+              labore et dolore magna. <br />
+              aliqua enim ad minim veniam quis.
+            </p>
+            <a class="btn">Contact Us</a>
+          </div>
+          <img class="header-object" src="./assets/img/header-object.png" />
+        </div>
+      </div>
+    </section>
     <script type="text/javascript" src="./utils/util.js"></script>
   </body>
 </html>
