--- a/index.html
+++ b/index.html
@@ -41,6 +41,48 @@
         </div>
       </div>
     </section>
+    <section class="service">
+      <div class="container">
+        <div class="col">
+          <div class="icon">
+            <ion-icon name="brush-outline"></ion-icon>
+          </div>
+          <h3>Brand Design</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
+            incididunt labore et dolore magna.
+          </p>
+        </div>
+        <div class="col">
+          <div class="icon">
+            <ion-icon name="people-outline"></ion-icon>
+          </div>
+          <h3>Seo & Marketing</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
+            incididunt labore et dolore magna.
+          </p>
+        </div>
+        <div class="col">
+          <div class="icon">
+            <ion-icon name="qr-code-outline"></ion-icon>
+          </div>
+          <h3>Creative Design</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
+            incididunt labore et dolore magna.
+          </p>
+        </div>
+      </div>
+    </section>
     <script type="text/javascript" src="./utils/util.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
