add about section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Dizer</title>
   </head>
   <body>
+    <!-- Navbar section -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="logo-wrapper">
@@ -25,6 +26,7 @@
         </div>
       </div>
     </nav>
+    <!-- Head banner section -->
     <section class="head-banner">
       <div class="container">
         <div class="row">
@@ -35,12 +37,13 @@
               labore et dolore magna. <br />
               aliqua enim ad minim veniam quis.
             </p>
-            <a class="btn">Contact Us</a>
+            <a href="#" class="btn">Contact Us</a>
           </div>
           <img class="header-object" src="./assets/img/header-object.png" />
         </div>
       </div>
     </section>
+    <!-- Service section -->
     <section class="service">
       <div class="container">
         <div class="col">
@@ -75,7 +78,41 @@
         </div>
       </div>
     </section>
+    <!-- About section -->
+    <section class="about">
+      <div class="container">
+        <div class="left">
+          <img src="./assets/img/about.jpg" alt="pillow" />
+          <div class="play-bg">
+            <div class="play">
+              <a href="" class="play-link">
+                <ion-icon name="play"></ion-icon>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <h3>ABOUT US</h3>
+          <h2>
+            We are Design & <br />
+            Development Team.
+          </h2>
+          <p>
+            Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
+            labore et dolore magna aliqua enim minim veniam quis nostrud
+            exercitation ullamco laboris nisi ut aliquip commodo consequat.duis
+            aute irure. <br />
+            Excepteur sint occaecat cupidatat non proident sunt in culpa qui
+            officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+            unde omnis iste natus error sit voluptatem.
+          </p>
+          <a href="#" class="btn">Purchase Now</a>
+        </div>
+      </div>
+    </section>
+    <!-- Import JS -->
     <script type="text/javascript" src="./utils/util.js"></script>
+    <!-- Ion icon -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
