--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Navbar section -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar" id="nav">
       <div class="container">
         <div class="logo-wrapper">
           <img class="logo" src="./assets/img/dizer.png" />
@@ -107,6 +107,89 @@
             unde omnis iste natus error sit voluptatem.
           </p>
           <a href="#" class="btn">Purchase Now</a>
+        </div>
+      </div>
+    </section>
+    <!-- Project section -->
+    <section class="project">
+      <div class="container">
+        <div class="top">
+          <h3>OUR PROJECT</h3>
+          <h2>Take a Look Around Our Portfolio</h2>
+        </div>
+        <div class="bot">
+          <div class="col">
+            <div class="bot-item">
+              <img src="./assets/img/p1.jpg" alt="" />
+              <div class="box">
+                <div class="box-content">
+                  <a class="box-link">
+                    <h5>Painting</h5>
+                    <p>Design</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="bot-item">
+              <img src="./assets/img/p4.jpg" alt="" />
+              <div class="box">
+                <div class="box-content">
+                  <a class="box-link">
+                    <h5>Portfolio</h5>
+                    <p>Design</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="bot-item">
+              <img src="./assets/img/p2.jpg" alt="" />
+              <div class="box">
+                <div class="box-content">
+                  <a class="box-link">
+                    <h5>Web app</h5>
+                    <p>Development</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="bot-item">
+              <img src="./assets/img/p5.jpg" alt="" />
+              <div class="box">
+                <div class="box-content">
+                  <a class="box-link">
+                    <h5>Agency Web</h5>
+                    <p>Design</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="bot-item">
+              <img src="./assets/img/p3.jpg" alt="" />
+              <div class="box">
+                <div class="box-content">
+                  <a class="box-link">
+                    <h5>Business</h5>
+                    <p>Marketing</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="bot-item">
+              <img src="./assets/img/p6.jpg" alt="" />
+              <div class="box">
+                <div class="box-content">
+                  <a class="box-link">
+                    <h5>Modern Web</h5>
+                    <p>SEO</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
