add info section

--- a/index.html
+++ b/index.html
@@ -46,67 +46,71 @@
     <!-- Service section -->
     <section class="service">
       <div class="container">
-        <div class="col">
-          <div class="icon">
-            <ion-icon name="brush-outline"></ion-icon>
+        <div class="row">
+          <div class="col">
+            <div class="icon">
+              <ion-icon name="brush-outline"></ion-icon>
+            </div>
+            <h3>Brand Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
+              incididunt labore et dolore magna.
+            </p>
           </div>
-          <h3>Brand Design</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
-            incididunt labore et dolore magna.
-          </p>
-        </div>
-        <div class="col">
-          <div class="icon">
-            <ion-icon name="people-outline"></ion-icon>
+          <div class="col">
+            <div class="icon">
+              <ion-icon name="people-outline"></ion-icon>
+            </div>
+            <h3>Seo & Marketing</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
+              incididunt labore et dolore magna.
+            </p>
           </div>
-          <h3>Seo & Marketing</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
-            incididunt labore et dolore magna.
-          </p>
-        </div>
-        <div class="col">
-          <div class="icon">
-            <ion-icon name="qr-code-outline"></ion-icon>
+          <div class="col">
+            <div class="icon">
+              <ion-icon name="qr-code-outline"></ion-icon>
+            </div>
+            <h3>Creative Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
+              incididunt labore et dolore magna.
+            </p>
           </div>
-          <h3>Creative Design</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur elit sed do eiusmod tempor
-            incididunt labore et dolore magna.
-          </p>
         </div>
       </div>
     </section>
     <!-- About section -->
     <section class="about">
       <div class="container">
-        <div class="left">
-          <img src="./assets/img/about.jpg" alt="pillow" />
-          <div class="play-bg">
-            <div class="play">
-              <a href="" class="play-link">
-                <ion-icon name="play"></ion-icon>
-              </a>
+        <div class="row">
+          <div class="left">
+            <img src="./assets/img/about.jpg" alt="pillow" />
+            <div class="play-bg">
+              <div class="play">
+                <a href="" class="play-link">
+                  <ion-icon name="play"></ion-icon>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="right">
-          <h3>ABOUT US</h3>
-          <h2>
-            We are Design & <br />
-            Development Team.
-          </h2>
-          <p>
-            Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
-            labore et dolore magna aliqua enim minim veniam quis nostrud
-            exercitation ullamco laboris nisi ut aliquip commodo consequat.duis
-            aute irure. <br />
-            Excepteur sint occaecat cupidatat non proident sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-            unde omnis iste natus error sit voluptatem.
-          </p>
-          <a href="#" class="btn">Purchase Now</a>
+          <div class="right">
+            <h3>ABOUT US</h3>
+            <h2>
+              We are Design & <br />
+              Development Team.
+            </h2>
+            <p>
+              Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
+              labore et dolore magna aliqua enim minim veniam quis nostrud
+              exercitation ullamco laboris nisi ut aliquip commodo
+              consequat.duis aute irure. <br />
+              Excepteur sint occaecat cupidatat non proident sunt in culpa qui
+              officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+              unde omnis iste natus error sit voluptatem.
+            </p>
+            <a href="#" class="btn">Purchase Now</a>
+          </div>
         </div>
       </div>
     </section>
@@ -188,6 +192,48 @@
                   </a>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="info">
+      <div class="container">
+        <div class="row">
+          <div class="info-item">
+            <div class="info-icon">
+              <ion-icon name="briefcase-outline"></ion-icon>
+            </div>
+            <div class="info-content">
+              <h1>370</h1>
+              <p>Work Completed</p>
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="info-icon">
+              <ion-icon name="bulb-outline"></ion-icon>
+            </div>
+            <div class="info-content">
+              <h1>450</h1>
+              <p>New Project</p>
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="info-icon">
+              <ion-icon name="heart-outline"></ion-icon>
+            </div>
+            <div class="info-content">
+              <h1>50<span>k+</span></h1>
+              <p>Happy Customers</p>
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="info-icon">
+              <ion-icon name="trophy-outline"></ion-icon>
+            </div>
+            <div class="info-content">
+              <h1>50<span>+</span></h1>
+              <p>Awards Win</p>
             </div>
           </div>
         </div>
