--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
     <!-- Navbar section -->
     <nav class="navbar" id="nav">
       <div class="container">
-        <div class="logo-wrapper">
-          <img class="logo" src="./assets/img/dizer.png" />
-        </div>
-        <div class="menu-container">
-          <ul class="menu">
-            <li class="item"><a class="link-item">HOME</a></li>
-            <li class="item"><a class="link-item">ABOUT</a></li>
-            <li class="item"><a class="link-item">SERVICE</a></li>
-            <li class="item"><a class="link-item">PORTFOLIO</a></li>
-            <li class="item"><a class="link-item">NEWS</a></li>
-            <li class="item"><a class="link-item">CONTACT</a></li>
-          </ul>
+        <div class="row">
+          <div class="logo-wrapper">
+            <img class="logo" src="./assets/img/dizer.png" />
+          </div>
+          <div class="menu-container">
+            <ul class="menu">
+              <li class="item"><a class="link-item">HOME</a></li>
+              <li class="item"><a class="link-item">ABOUT</a></li>
+              <li class="item"><a class="link-item">SERVICE</a></li>
+              <li class="item"><a class="link-item">PORTFOLIO</a></li>
+              <li class="item"><a class="link-item">NEWS</a></li>
+              <li class="item"><a class="link-item">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
@@ -235,6 +237,51 @@
               <h1>50<span>+</span></h1>
               <p>Awards Win</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="skill">
+      <div class="container">
+        <div class="row">
+          <div class="skill-left">
+            <div class="skill-content">
+              <h3>OUR SKILL</h3>
+              <h2>
+                We are Design & <br />
+                Development team.
+              </h2>
+            </div>
+            <div class="bar-wrapper">
+              <div class="bar">
+                <h4>BRANDING</h4>
+                <div class="progress">
+                  <div class="progress-fill" percent="85"><span>0</span></div>
+                </div>
+              </div>
+              <div class="bar">
+                <h4>CONSULTING</h4>
+                <div class="progress">
+                  <div class="progress-fill" percent="90"><span>0</span></div>
+                </div>
+              </div>
+              <div class="bar">
+                <h4>BUSINESS</h4>
+                <div class="progress">
+                  <div class="progress-fill" percent="75"><span>0</span></div>
+                </div>
+              </div>
+              <div class="bar">
+                <h4>PROMOTION</h4>
+                <div class="progress">
+                  <div class="progress-fill" percent="90"><span>0</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="skill-right">
+            <img class="skill-bg" src="./assets/img/skill1.jpg" alt="" />
+            <img class="skill-img" src="./assets/img/skill2.jpg" alt="" />
           </div>
         </div>
       </div>
