add testimonials empty section

--- a/index.html
+++ b/index.html
@@ -286,6 +286,15 @@
         </div>
       </div>
     </section>
+    <section class="testimonial">
+      <div class="container">
+        <div class="testimonial-content">
+          <h3>TESTIMONIALS</h3>
+          <h2>Our Clients Say</h2>
+        </div>
+        <div class="slider"></div>
+      </div>
+    </section>
     <!-- Import JS -->
     <script type="text/javascript" src="./utils/util.js"></script>
     <!-- Ion icon -->
