add empty sections and css files

--- a/index.html
+++ b/index.html
@@ -295,6 +295,11 @@
         <div class="slider"></div>
       </div>
     </section>
+    <section class="slide-banner"><div class="container"></div></section>
+    <section class="team"><div class="container"></div></section>
+    <section class="article"><div class="container"></div></section>
+    <section class="contact"><div class="container"></div></section>
+    <section class="footer"><div class="container"></div></section>
     <!-- Import JS -->
     <script type="text/javascript" src="./utils/util.js"></script>
     <!-- Ion icon -->
