--- a/index.html
+++ b/index.html
@@ -295,10 +295,122 @@
         <div class="slider"></div>
       </div>
     </section>
-    <section class="slide-banner"><div class="container"></div></section>
-    <section class="team"><div class="container"></div></section>
-    <section class="article"><div class="container"></div></section>
-    <section class="contact"><div class="container"></div></section>
+    <section class="slide-banner">
+      <div class="container"><div class="row"></div></div>
+    </section>
+    <section class="team">
+      <div class="container">
+        <div class="row">
+          <div class="team-item">
+            <img src="./assets/img/t1.jpg" alt="" />
+            <div class="team-overlay">
+              <div class="team-content">
+                <h5>Liam Hughes</h5>
+                <p>Manager</p>
+              </div>
+            </div>
+          </div>
+          <div class="team-item">
+            <img src="./assets/img/t2.jpg" alt="" />
+            <div class="team-overlay">
+              <div class="team-content">
+                <h5>Liam Hughes</h5>
+                <p>Manager</p>
+              </div>
+            </div>
+          </div>
+          <div class="team-item">
+            <img src="./assets/img/t3.jpg" alt="" />
+            <div class="team-overlay">
+              <div class="team-content">
+                <h5>Liam Hughes</h5>
+                <p>Manager</p>
+              </div>
+            </div>
+          </div>
+          <div class="team-item">
+            <img src="./assets/img/t4.jpg" alt="" />
+            <div class="team-overlay">
+              <div class="team-content">
+                <h5>Liam Hughes</h5>
+                <p>Manager</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="article">
+      <div class="container">
+        <div class="article-head">
+          <h3>LATEST ARTICLE</h3>
+          <h2>Stay Update with dizer.</h2>
+        </div>
+        <div class="row">
+          <div class="article-item">
+            <div class="blog-img">
+              <img src="./assets/img/a1.jpg" alt="" />
+              <a href="" class="blog-link">Article</a>
+            </div>
+            <div class="article-content">
+              <a href="" class="title">
+                Elit duied aiusm tempor did labore dolory
+              </a>
+              <div class="article-credit">
+                <a>BY ADMIN</a>
+                <span> / ON 2 SEP, 2018</span>
+              </div>
+              <p>
+                Excepteur sint ocacat cupidatat non proi dent sunt in culpa qui
+                officia deserunt.mollit anim id est laborum. sed ut pers
+                piciatis unde.
+              </p>
+            </div>
+          </div>
+          <div class="article-item">
+            <div class="blog-img">
+              <img src="./assets/img/a2.jpg" alt="" />
+              <a href="" class="blog-link">Lifestyle</a>
+            </div>
+            <div class="article-content">
+              <a href="" class="title">
+                Elit duied aiusm tempor did labore dolory
+              </a>
+              <div class="article-credit">
+                <a>BY ADMIN</a>
+                <span> / ON 2 SEP, 2018</span>
+              </div>
+              <p>
+                Excepteur sint ocacat cupidatat non proi dent sunt in culpa qui
+                officia deserunt.mollit anim id est laborum. sed ut pers
+                piciatis unde.
+              </p>
+            </div>
+          </div>
+          <div class="article-item">
+            <div class="blog-img">
+              <img src="./assets/img/a3.jpg" alt="" />
+              <a href="" class="blog-link">Creative</a>
+            </div>
+            <div class="article-content">
+              <a href="" class="title">
+                Elit duied aiusm tempor did labore dolory
+              </a>
+              <div class="article-credit">
+                <a>BY ADMIN</a>
+                <span> / ON 2 SEP, 2018</span>
+              </div>
+              <p>
+                Excepteur sint ocacat cupidatat non proi dent sunt in culpa qui
+                officia deserunt.mollit anim id est laborum. sed ut pers
+                piciatis unde.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="quote"><div class="container"></div></section>
     <section class="footer"><div class="container"></div></section>
     <!-- Import JS -->
     <script type="text/javascript" src="./utils/util.js"></script>
