--- a/index.html
+++ b/index.html
@@ -410,7 +410,18 @@
         </div>
       </div>
     </section>
-    <section class="quote"><div class="container"></div></section>
+    <section class="quote">
+      <div class="container">
+        <div class="row">
+          <div class="quote-left">
+            <h2>Dizer Give The Smart Solution For Your Business</h2>
+          </div>
+          <div class="quote-right">
+            <a>Get A Quote</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="footer"><div class="container"></div></section>
     <!-- Import JS -->
     <script type="text/javascript" src="./utils/util.js"></script>
